--- a/prepros.cfg
+++ b/prepros.cfg
@@ -674,7 +674,8 @@
           "mouseSync": true,
           "scrollSync": true,
           "keyboardSync": true,
-          "animateCss": true
+          "animateCss": true,
+          "enable": false
         },
         "deployment": {
           "ftpHost": "",
