--- a/prepros.cfg
+++ b/prepros.cfg
@@ -654,6 +654,17 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "8d04cb13": {
+          "id": "8d04cb13",
+          "path": "team.html",
+          "output": "team.html",
+          "name": "team.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
         }
       },
       "deploymentHistory": {},
