--- a/prepros.cfg
+++ b/prepros.cfg
@@ -665,6 +665,19 @@
           "imported": false,
           "parents": [],
           "type": "html"
+        },
+        "44e9c68f": {
+          "id": "44e9c68f",
+          "path": "img/people/ben.jpg",
+          "output": "img/people/ben.jpg",
+          "name": "ben.jpg",
+          "category": "IMAGE",
+          "size": 101168,
+          "type": "jpg",
+          "initialSize": 101168,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
